# kissez

./: .eslintrc.json  .gitmodules  README.md  bun.lockb  package.json  pnpm-lock.yaml  vite.config.ts
server/: Cargo.toml  README.md
server/src/: lib.rs  main.rs  test.rs
src/: AnchorRow.tsx  App.module.scss  App.tsx  BooksProvider.tsx  Config.tsx  MainPage.tsx  Read.tsx  Selector.tsx  Shelf.tsx  StateProvider.tsx  Timer.tsx  index.tsx
src/Providers/: BooksProvider.tsx  SelectedProvider.tsx  StateProvider.tsx
