[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.3"
actix-files = "0.6.2"
actix-web = "4.2.1"
ammonia = "3.2.1"
awc = { version = "3.0.1", features = ["rustls"] }
env_logger = "0.9.1"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
# futures = "0.3.24"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
